--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,4 +197,17 @@
         app:layout_constraintStart_toEndOf="@+id/buttonborrar"
         app:layout_constraintTop_toBottomOf="@+id/buttonmas" />
 
+    <Button
+        android:id="@+id/buttonresta"
+        android:layout_width="74dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="77dp"
+        android:text="@string/botonResta"
+        app:layout_constraintBottom_toTopOf="@+id/buttonmas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button6"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
