--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,14 +71,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:text="@string/botonBorrar"
         android:gravity="center_vertical|center_horizontal"
         android:padding="0dp"
+        android:text="@string/botonBorrar"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonResta"
+        app:layout_constraintBottom_toTopOf="@+id/buttonMultiplicar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/resultView"/>
+        app:layout_constraintTop_toBottomOf="@+id/resultView" />
 
     <Button
         android:id="@+id/button4"
@@ -136,7 +136,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toEndOf="@id/button6"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBorrar" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplicar" />
 
     <Button
         android:id="@+id/button7"
@@ -223,6 +223,18 @@
         app:layout_constraintTop_toBottomOf="@+id/button8"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
+    <Button
+        android:id="@+id/buttonMultiplicar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:padding="0dp"
+        android:text="*"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/buttonResta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button3"
+        app:layout_constraintTop_toBottomOf="@id/buttonBorrar"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
