--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -229,7 +229,7 @@
         android:layout_height="0dp"
         android:layout_margin="10dp"
         android:padding="0dp"
-        android:text="@string/botonMultiplicar"
+        android:text="@string/botonMultiplicacion"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/buttonResta"
         app:layout_constraintEnd_toEndOf="parent"
